Fix #content spacing, align project arrows halfway down first image, realign landscape images in frame, add padding to social section.

--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,7 @@ a:hover {
 
 #projects {
 	position: relative;
+	overflow: hidden;
 }
 
 #projects h1 {
@@ -184,10 +185,11 @@ a:hover {
 
 #projects .arrow {
 	position: absolute;
-	top: 200px;
+	top: calc(107px + 25.6vw);
 	padding: 2px 6px 3px;
 	border-radius: 2px;
 	z-index: 10;
+	font-size: 30px;
 }
 
 #projects .arrow:hover {
@@ -215,7 +217,7 @@ a:hover {
 .slide.active {
 	height: auto;
 	opacity: 1;
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 }
 
 
@@ -228,7 +230,7 @@ a:hover {
 }
 
 	#projects .frame.landscape {
-		background-position: 50% 48%;
+		background-position: 50% 53%;
 		height: 51.2vw;
 		width: 80vw;
 	}
@@ -369,7 +371,7 @@ input#ss-submit.disabled {
 .social {
 	display: flex;
 	flex-direction: row;
-	padding: 30px 15px;
+	padding: 60px 15px;
 	background-color: rgba(0,0,0,0.5);
 }
 
